--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
     "@angular/http": "^7.2.16",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/call-number": "^5.31.1",
+    "@ionic-native/camera": "^5.31.1",
     "@ionic-native/core": "4.20.0",
+    "@ionic-native/email-composer": "^5.31.1",
+    "@ionic-native/local-notifications": "^5.31.1",
+    "@ionic-native/network": "^5.31.1",
+    "@ionic-native/social-sharing": "^5.31.1",
     "@ionic-native/splash-screen": "4.20.0",
     "@ionic-native/status-bar": "4.20.0",
     "@ionic/storage": "2.2.0",
-    "cordova-ios": "6.2.0",
     "cordova-res": "^0.15.3",
     "ionic-angular": "3.9.9",
     "ionicons": "3.0.0",
@@ -34,13 +39,22 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.4",
+    "call-number": "^1.0.1",
     "cordova-android": "^9.0.0",
+    "cordova-plugin-badge": "^0.8.8",
+    "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-email": "^1.2.7",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
+    "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-socialsharing": "^6.0.3",
+    "de.appplant.cordova.plugin.local-notification": "^0.8.5",
+    "es6-promise-plugin": "^4.2.2",
     "typescript": "2.6.2"
   },
   "description": "An Ionic project",
@@ -53,7 +67,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "de.appplant.cordova.plugin.local-notification": {}
     },
     "platforms": [
       "android",
